[package]
name = "swap-escrow"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "^1.18.25"
borsh = "0.9.3"
borsh-derive = " 0.9.1"
spl-token = "4.0.0"
blake3 = { version = "1.3.3", features = ["digest"] } 
spl-associated-token-account = "3.0.0"



[lib]
crate-type = ["cdylib", "lib"]
